verify/tests/cases/errors/until_without_repeat.b
REM Test: UNTIL without matching REPEAT (should fail)
x% = 1
UNTIL x% > 5
